--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,12 @@
 }
 html {
   font-size: 40%;
+  scroll-behavior: auto;
 }
 @media only screen and (min-width: 992px) {
   html {
     font-size: 50%;
+    scroll-behavior: smooth;
   }
 }
 body {
