Adding Workflow sketch to portfolio. Modyfing button in Portfolio

--- a/css/styles.css
+++ b/css/styles.css
@@ -325,29 +325,43 @@ main {
   width: 100%;
   margin-bottom: 20px;
   animation-name: imageshadow;
-  animation-duration: 4s;
+  animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-timing-function: ease-in;
 }
 @keyframes imageshadow {
   0% {
-    box-shadow: 0 0 23px 0 #006dff;
+    box-shadow: 0 0 20px 0 #006dff;
   }
   100% {
-    box-shadow: 0 0 0px 0 #006dff;
+    box-shadow: 0 0 10px 0 #006dff;
   }
 }
-.portfolio .portfolio-item a {
+.portfolio .portfolio-item > a {
   align-self: flex-start;
   font-size: 4.2rem;
-  font-weight: 700;
+  font-weight: 500;
   text-decoration: none;
   color: #006dff;
   margin-bottom: 10px;
   border: 1px #006dff solid;
   padding: 4px 8px;
   border-radius: 5px;
+}
+.portfolio .portfolio-item > a:hover {
+  background-color: #006dff;
+  color: #fff;
+  animation-name: activbutton;
+  animation-duration: 400ms;
+}
+@keyframes activbutton {
+  0% {
+    background-color: #006dff00;
+  }
+  100% {
+    background-color: #006dff;
+  }
 }
 .portfolio .portfolio-item p {
   align-self: flex-start;
@@ -363,6 +377,7 @@ main {
   color: #006dff;
   border: 0px;
   background: none;
+  text-decoration: none;
 }
 .contact-me form > * {
   border-radius: 0.4em;
