--- a/less/styles.less
+++ b/less/styles.less
@@ -3,6 +3,7 @@
 @white85:#fffd;
 @black: #000;
 @link: #006dff;
+@link-transparent: #006dff00;
 
 
 
@@ -399,27 +400,41 @@ main {
             width: 100%;
             margin-bottom: 20px;
             animation-name: imageshadow;
-            animation-duration: 4s;
+            animation-duration: 3s;
             animation-iteration-count: infinite;
             animation-direction: alternate;
             animation-timing-function: ease-in;
             
             @keyframes imageshadow {
-                0% { box-shadow: 0 0 23px 0 @link; }
-                100% { box-shadow: 0 0 0px 0 @link;  }
+                0% { box-shadow: 0 0 20px 0 @link; }
+                100% { box-shadow: 0 0 10px 0 @link;  }
             }
         }
         
-        a {
+        > a {
             align-self: flex-start;
             font-size: 4.2rem;
-            font-weight: 700;
+            font-weight: 500;
             text-decoration: none;
             color: @link;
             margin-bottom: 10px;
             border: 1px @link solid;
             padding: 4px 8px;
             border-radius: 5px;
+
+            &:hover {
+                background-color: @link;
+                color: @white;
+                animation-name: activbutton;
+                animation-duration: 400ms;
+
+                @keyframes activbutton {
+                0% { background-color: @link-transparent; }
+                100% { background-color: @link; }
+                }
+
+
+            };
         }
 
         p {
@@ -437,6 +452,7 @@ main {
                 color: @link;
                 border: 0px;
                 background: none;
+                text-decoration: none;
             } 
         }
     }
